refactor: oRPC config moved to own config
